tests/errors/lifetime/path_borrower/field_borrower_blocks_direct_access_to_loaned_place.err.expected
error: at 8:13: [LT-LoanConflict] In function 'f', block 'entry': cannot write to 'x': already borrowed by 'b.p'
   |
 8 |             x = 42;
   |             ^^^^^^
  = note: borrow of 'x' occurs here
   |
 7 |             b.p = &mut x;
   |             ^^^^^^^^^^^^
  hint: the borrow of 'b.p' is active until its last use or explicit unborrow.
